[package]
name = "sandwich-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.27"
dashmap = "6.1.0"
futures = "0.3.31"
solana-rpc-client = "2.1.9"
solana-sdk = "2.1.9"
tokio = "1.43.0"
yellowstone-grpc-client = { path = "./yellowstone-grpc/yellowstone-grpc-client" }
yellowstone-grpc-proto = { path = "./yellowstone-grpc/yellowstone-grpc-proto" }
